--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -20,9 +20,8 @@ jobs:
         distribution: 'temurin'
         cache: gradle
         
-    - name: Look for gradlew
-      run: find / -type f -name "gradlew"
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: gradlew build
