--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
         
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Grant execute permission for gradle
+      run: chmod +x gradle
     - name: Build with Gradle
-      run: gradlew build
+      run: ./gradle build
