--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-        
+    - name: Grant execute permission for build.gradle
+      run: chmod +x build.gradle
     - name: Build Project
       run: ./build.gradle 
