--- a/.github/workflows/android-ci-dev.yml
+++ b/.github/workflows/android-ci-dev.yml
@@ -17,7 +17,7 @@ jobs:
     - name: set up JDK 8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8.0_111
+        java-version: 1.8.0
         distribution: 'temurin'
         cache: gradle
         
