--- a/.github/workflows/android-ci-dev.yml
+++ b/.github/workflows/android-ci-dev.yml
@@ -1,4 +1,3 @@
-
 name: Android CI
 
 on:
@@ -13,16 +12,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8.0
-        distribution: 'temurin'
-        cache: gradle
-        
+      - uses: actions/checkout@v3
+      - name: set up JDK 8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8.0
+          cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build --stacktrace
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build --stacktrace
+
+
+      - name: Run unit tests
+        run: ./gradlew connectedAndroidTest --info
+
+
+
+  test:
+    runs-on: macos-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew connectedCheck --info --stacktrace
