--- a/.github/workflows/android-ci-dev.yml
+++ b/.github/workflows/android-ci-dev.yml
@@ -26,19 +26,23 @@ jobs:
         run: ./gradlew build --stacktrace
 
 
-#       - name: Run unit tests
-#         run: ./gradlew connectedAndroidTest --info
-
-
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-
-      - name: run tests
+      - name: Run unit tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 26
           script: ./gradlew connectedCheck --info --stacktrace
+#         run: ./gradlew connectedAndroidTest --info
+
+
+
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: checkout
+#         uses: actions/checkout@v3
+
+#       - name: run tests
+#         uses: reactivecircus/android-emulator-runner@v2
+#         with:
+#           api-level: 26
+#           script: ./gradlew connectedCheck --info --stacktrace
