--- a/.github/workflows/android-ci-dev.yml
+++ b/.github/workflows/android-ci-dev.yml
@@ -26,7 +26,7 @@ jobs:
         run: ./gradlew build --stacktrace
 
 
-      - name: Run unit tests
+      - name: Run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 26
