--- a/.github/workflows/android-ci-dev.yml
+++ b/.github/workflows/android-ci-dev.yml
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        api-level: [26]
+        api-level: [ 26 ]
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -62,7 +62,7 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-        
+
       - name: AVD cache
         uses: actions/cache@v3
         id: avd-cache
@@ -82,7 +82,11 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
-      - name: run tests
+
+      - name :Local unit tests
+        run: ./gradlew test --info --stacktrace
+
+      - name: Instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: ${{ matrix.api-level }}
