--- a/.github/workflows/android-ci-dev.yml
+++ b/.github/workflows/android-ci-dev.yml
@@ -82,8 +82,8 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
-      - name: Local unit tests
-        run: ./gradlew test --info --stacktrace
+#       - name: Local unit tests
+#         run: ./gradlew test --info --stacktrace
 
       - name: Instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
